--- a/11-dars-LoyihaKomponentXususiyatlari/src/components/movie-list-item/movie-list-item.css
+++ b/11-dars-LoyihaKomponentXususiyatlari/src/components/movie-list-item/movie-list-item.css
@@ -55,7 +55,7 @@
 	transform: translateX(0px);
 }
 
-.list-group-item.favourite .list-group-item-label,
+.list-group-item.favourite .list-group-item-lable,
 .list-group-item.favourite .list-group-item-input {
 	color: #e09f3e;
 }
